fix(board): add column not snappable on mobile

--- a/apps/client/src/widgets/collections/board/index.css
+++ b/apps/client/src/widgets/collections/board/index.css
@@ -41,7 +41,11 @@ body.mobile .board-view-container {
 body.mobile .board-view-container .board-column {
   width: 75vw;
   max-width: 300px;
-  scroll-snap-align: center;
+}
+
+body.mobile .board-view-container .board-column,
+body.mobile .board-view-container .board-add-column {
+    scroll-snap-align: center;
 }
 
 .board-view-container .board-column.drag-over {
